[gd_scene load_steps=11 format=3 uid="uid://d32dl3s4offu"]

[ext_resource type="Texture2D" uid="uid://csibj827o7h0h" path="res://ui_scenes/mainMenu/saveSlot/rect.png" id="1_1s8nc"]
[ext_resource type="Script" uid="uid://b3se3ismodc2p" path="res://ui_scenes/achievements/achievementsMenu.gd" id="1_88024"]
[ext_resource type="PackedScene" uid="uid://d0j06gpiq8jxo" path="res://ui_scenes/mainMenu/textbutton/text_button.tscn" id="3_epdkn"]
[ext_resource type="Texture2D" uid="uid://dhe0t0uxqsjlf" path="res://ui_scenes/achievements/ng.png" id="4_d4sxd"]

[sub_resource type="LabelSettings" id="LabelSettings_ja3aa"]
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vrhq"]
bg_color = Color(0.709804, 0.709804, 0.709804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slyn1"]
bg_color = Color(0.658824, 0.658824, 0.658824, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y2px4"]
bg_color = Color(0.509804, 0.509804, 0.509804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_givww"]
content_margin_left = 1.0
content_margin_top = 0.0
content_margin_right = 4.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 0.176471)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 2
anti_aliasing = false

[sub_resource type="Theme" id="Theme_3mgln"]
VScrollBar/styles/grabber = SubResource("StyleBoxFlat_8vrhq")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxFlat_slyn1")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxFlat_y2px4")
VScrollBar/styles/scroll = SubResource("StyleBoxFlat_givww")
VScrollBar/styles/scroll_focus = null
VSlider/constants/center_grabber = 0

[node name="achievementsMenu" type="Node2D"]
script = ExtResource("1_88024")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_left = 11.0
offset_top = 11.0
offset_right = 388.0
offset_bottom = 289.0
texture = ExtResource("1_1s8nc")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Label3" type="Label" parent="."]
offset_left = 15.0
offset_top = 18.0
offset_right = 384.0
offset_bottom = 54.0
text = "medals !"
label_settings = SubResource("LabelSettings_ja3aa")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 20.0
offset_top = 55.0
offset_right = 380.0
offset_bottom = 281.0
theme = SubResource("Theme_3mgln")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="textButton" parent="." instance=ExtResource("3_epdkn")]
offset_left = 330.0
offset_top = 26.0
offset_right = 359.0
offset_bottom = 43.0
buttonText = "back"

[node name="Ng" type="Sprite2D" parent="."]
position = Vector2(41, 32)
texture = ExtResource("4_d4sxd")

[node name="connecttong" type="Button" parent="Ng"]
modulate = Color(1, 1, 1, 0)
offset_left = -17.0
offset_top = -10.0
offset_right = 15.0
offset_bottom = 17.0
tooltip_text = "connect to newgrounds"

[node name="Label" type="Label" parent="Ng"]
modulate = Color(0.337255, 0.337255, 0.337255, 1)
offset_left = 19.0
offset_top = -4.0
offset_right = 81.0
offset_bottom = 12.0

[connection signal="pressed" from="textButton" to="." method="_on_text_button_pressed"]
[connection signal="mouse_entered" from="Ng/connecttong" to="." method="_on_connecttong_mouse_entered"]
[connection signal="mouse_exited" from="Ng/connecttong" to="." method="_on_connecttong_mouse_exited"]
[connection signal="pressed" from="Ng/connecttong" to="." method="_on_connecttong_pressed"]
